added link to github repo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
       crossorigin="anonymous"
     />
     
-</head>
+
+  <header>
+    <nav>
+      <a href="https://github.com/benjaminharuna1/Responsiveness-and-Media-Queries--zuri">Llink to the source code on github repository</a>
+    </nav>
+  </header></head>
 <body>
     
             <div class="container">
